--- a/Space Invaders Clone/.project
+++ b/Space Invaders Clone/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Controlled Bitmap Animation</name>
+	<name>Space Invaders Clone</name>
 	<comment></comment>
 	<projects>
 	</projects>
