--- a/Bitmap animation controlled by user input/.project
+++ b/Bitmap animation controlled by user input/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Another Controlled Bitmap Animation</name>
+	<name>Bitmap animation controlled by user input</name>
 	<comment></comment>
 	<projects>
 	</projects>
