Use Meson build system

--- a/Mandelbrot set/meson.build
+++ b/Mandelbrot set/meson.build
@@ -3,6 +3,6 @@ project('mybuildtarget','cpp')
 sdl2 = dependency('sdl2')
 
 executable('mybuildtarget',
-	'src/main.cpp',
+	['src/main.cpp', 'src/Display.h', 'src/Display.cpp'],
 	dependencies: sdl2,
-	install:true)
+	install : true)
