--- a/Conway's Game of Life/meson.build
+++ b/Conway's Game of Life/meson.build
@@ -4,5 +4,7 @@ sdl2 = dependency('sdl2')
 
 executable('mybuildtarget',
 	'src/main.cpp',
+	'src/Display.h',
+	'src/Display.cpp',
 	dependencies: sdl2,
 	install:true)
